--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <button onclick="startSurvey()">검사 시작</button>
   </div>
 
-  <form id="wisdomForm"></form>
+  <!-- 수정된 부분: form → div -->
+  <div id="wisdomForm"></div>
   <div id="result"></div>
 
 <script>
